--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -2,13 +2,12 @@
 	font-size: 1.1rem;
 	font-weight: 500;
 	line-height: 1.3;
-	margin-bottom: 7px;
-	// font-style: italic;
+	margin-top: 7px;
 }
 
 .dateTime {
 	font-weight: 400;
 	font-size: 0.7rem;
 	font-family: "mallory", serif;
-	color: rgb(153, 153, 153);
+	color: rgb(153, 153, 153, 0.75);
 }
