--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -1,14 +1,14 @@
 .container {
-	border-bottom: 4px solid rgb(65, 65, 65);
-	padding: 10px 0 30px;
+	border-bottom: 1px solid rgb(65, 65, 65, 0.2);
+	padding: 30px 0;
 }
 
 .heading {
 	font-family: "mallory", serif;
-	font-size: 0.95rem;
+	font-size: 3.95rem;
 	display: grid;
 	padding: 0 0 20px;
-	text-transform: uppercase;
+	text-transform: capitalize;
 
 	a {
 		text-align: right;
