--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -1,17 +1,17 @@
 .grid {
 	display: grid;
 
-	&Heading {
-		grid-template-columns: repeat(2, 50%);
-	}
-
 	&Content {
-		grid-template-columns: repeat(3, calc((100% / 3) - 10px));
-		grid-gap: 15px;
+		grid-template-columns: repeat(3, calc((100% / 3) - 20px));
+		grid-gap: 30px;
+
+		&:first-of-type {
+			content: none;
+		}
 	}
 
-	&Article {
-		grid-template-columns: 160px calc(100% - 160px - 15px);
-		grid-gap: 15px;
+	&Category {
+		grid-template-columns: 300px calc(100% - 300px - 30px);
+		grid-gap: 30px;
 	}
 }
