--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 :root {
   --sp: 1.5rem;
-  --darkgray: rgba(40, 40, 40, 1);
-  --light-grey: rgb(255, 255, 255);;
+  --darkgray: #ffffff;;
+  --light-grey: rgba(40, 40, 40, 1);
 }
 
 * {
@@ -17,10 +17,12 @@ body {
 }
 
 html {
-  font: 100%/1.5 "IBM Plex Serif",serif;
+  font: 100%/1.5 "Acta",serif;
   padding: var(--sp);
   background-color: var(--darkgray);
   color: var(--light-grey);
+  //-webkit-font-smoothing: antialiased;
+  //-moz-osx-font-smoothing: grayscale;
 }
 
 a {
