--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -11,7 +11,8 @@
 	}
 
 	&Category {
-		grid-template-columns: 300px calc(100% - 300px - 30px);
+		//grid-template-columns: 300px calc(100% - 300px - 30px);
+		grid-template-columns: minmax(10rem,1.5fr) 3fr;
 		grid-gap: 30px;
 	}
 }
