--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -3,14 +3,12 @@
 	padding: 30px 0;
 }
 
-.heading {
-	font-family: "mallory", serif;
-	font-size: 3.95rem;
-	display: grid;
-	padding: 0 0 20px;
+.title {
+	font-size: 1.95rem;
 	text-transform: capitalize;
-
-	a {
-		text-align: right;
-	}
+	padding: 0 0 20px;
+	border: none;
+	position: sticky;
+	top: 1rem;
+	height: max-content;
 }
