--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,9 +5,10 @@
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  position: relative;
+  box-sizing: border-box;
 }
 
 html,
@@ -40,4 +41,9 @@ header {
   padding-bottom: 20px;
   padding-top: 0;
   border-bottom: 2px solid rgb(56, 56, 56);
+}
+
+h1, h2 {
+  line-height: 1.25;
+  margin-bottom: 0.5rem;
 }
