--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -1,13 +1,47 @@
 .title {
-	font-size: 1.1rem;
+	font-size: 0.9em;
 	font-weight: 500;
 	line-height: 1.3;
-	margin-top: 7px;
+	margin-bottom: 5px;
 }
 
 .dateTime {
-	font-weight: 400;
 	font-size: 0.7rem;
-	font-family: "mallory", serif;
-	color: rgb(153, 153, 153, 0.75);
+	color: #727272;
+	letter-spacing: 1px;
+}
+
+.imagePlaceholder {
+	position: relative;
+	width: 100%;
+	height: 100px;
+	margin-bottom: 10px;
+}
+
+.singleArticle {
+	//padding: calc(0.275rem * 2 + 1px) calc(0.275rem * 2 + 1px);
+	////margin-left: calc(0.5rem * 2 + 1px);
+	//// padding-bottom: calc(0.5rem * 2 + 1px);
+	//// margin-bottom: calc(0.5rem * 2 + 1px);
+	//border-top: 1px solid #C7C7C7;
+	//border-left: 1px solid #C7C7C7;
+	//// padding-top: 0;
+	//
+	//&:nth-of-type(4n + 1) {
+	//	border-left: 0;
+	//	// padding-left: 0;
+	//}
+	//
+	//&:nth-of-type(4n) {
+	//	// padding-right: 0;
+	//}
+	//
+	//&:first-of-type,
+	//&:nth-of-type(2),
+	//&:nth-of-type(3),
+	//&:nth-of-type(4) {
+	//	padding-top: 0;
+	//	border-top: none;
+	//}
+
 }
