--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -4,11 +4,19 @@
 }
 
 .title {
-	font-size: 1.95rem;
+	font-size: 1.5rem;
 	text-transform: capitalize;
 	padding: 0 0 20px;
 	border: none;
 	position: sticky;
 	top: 1rem;
 	height: max-content;
+}
+
+.tagline {
+	display: block;
+	font-style: italic;
+	font-weight: 400;
+	font-size: 0.85rem;
+	margin-top: 0px;
 }
