--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -2,17 +2,39 @@
 	display: grid;
 
 	&Content {
-		grid-template-columns: repeat(3, calc((100% / 3) - 20px));
-		grid-gap: 30px;
+		grid-gap: calc(0.5rem * 2 + 1px);
+		grid-template-columns: repeat(4, 1fr);
 
-		&:first-of-type {
-			content: none;
+		//grid-gap: 1px;
+		//& > div {
+		//	background-color: white;
+		//	padding: 10px;
+		//}
+
+		// grid-gap: 30px;
+
+		&:not(:first-child)::before {
+			content: '';
+			height: 100%;
+			position: absolute;
+			left: calc(-1rem - 1px);
+			border-left: 1px solid #DFDFDF;
 		}
+
+		//& > *::after {
+		//	content: '';
+		//	display: block;
+		//	border-bottom: 1px solid #C7C7C7;
+		//	margin-top: 1rem;
+		//	margin-bottom: 1rem;
+		//	clear: both;
+		//	grid-column: 1/-1;
+		//}
 	}
 
 	&Category {
 		//grid-template-columns: 300px calc(100% - 300px - 30px);
-		grid-template-columns: minmax(10rem,1.5fr) 3fr;
+		grid-template-columns: minmax(8rem, 1fr) 3fr;
 		grid-gap: 30px;
 	}
 }
