--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -1,47 +1,34 @@
 .title {
-	font-size: 0.9em;
+	font-size: 1.2em;
 	font-weight: 500;
 	line-height: 1.3;
 	margin-bottom: 5px;
 }
 
-.dateTime {
-	font-size: 0.7rem;
-	color: #727272;
-	letter-spacing: 1px;
-}
-
 .imagePlaceholder {
 	position: relative;
 	width: 100%;
-	height: 100px;
-	margin-bottom: 10px;
+	height: 150px;
 }
 
 .singleArticle {
-	//padding: calc(0.275rem * 2 + 1px) calc(0.275rem * 2 + 1px);
-	////margin-left: calc(0.5rem * 2 + 1px);
-	//// padding-bottom: calc(0.5rem * 2 + 1px);
-	//// margin-bottom: calc(0.5rem * 2 + 1px);
-	//border-top: 1px solid #C7C7C7;
-	//border-left: 1px solid #C7C7C7;
-	//// padding-top: 0;
-	//
-	//&:nth-of-type(4n + 1) {
-	//	border-left: 0;
-	//	// padding-left: 0;
-	//}
-	//
-	//&:nth-of-type(4n) {
-	//	// padding-right: 0;
-	//}
-	//
-	//&:first-of-type,
-	//&:nth-of-type(2),
-	//&:nth-of-type(3),
-	//&:nth-of-type(4) {
-	//	padding-top: 0;
-	//	border-top: none;
-	//}
+	border-radius: 10px;
+	overflow: hidden;
+	border: 1px solid #dfdfdf;
+}
 
+.details {
+	padding: 1rem;
+	background-color: white;
+}
+
+.meta {
+	font-weight: bold;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 15px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-size: .625rem;
 }
