--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -3,21 +3,21 @@
 }
 
 .title {
-	background-color: white;
-	font-size: 1.6rem;
+	// background-color: white;
+	font-size: 1.3rem;
 	text-transform: capitalize;
-	padding: 0.5rem 2rem;
+	// padding: 0.5rem 2rem;
 	top: 1rem;
-	border-radius: 20px 20px 0 0;
+	// border-radius: 20px 20px 0 0;
 	max-width: 40%;
 	position: relative;
 	width: max-content;
 	margin: 0;
-	border: 1px solid #dfdfdf;
+	// border: 1px solid #dfdfdf;
 
 	h2 {
 		display: inline-block;
-		margin-bottom: 20px;
+		// margin-bottom: 20px;
 	}
 
 	//&:after {
