Design for daily scoop

--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -1,48 +1,3 @@
 .container {
-	margin-bottom: 3rem;
-}
-
-.title {
-	// background-color: white;
-	font-size: 1.3rem;
-	text-transform: capitalize;
-	// padding: 0.5rem 2rem;
-	top: 1rem;
-	// border-radius: 20px 20px 0 0;
-	max-width: 40%;
-	position: relative;
-	width: max-content;
-	margin: 0;
-	// border: 1px solid #dfdfdf;
-
-	h2 {
-		display: inline-block;
-		// margin-bottom: 20px;
-	}
-
-	//&:after {
-	//	background: #ffeeee;
-	//	content: "";
-	//	position: absolute;
-	//	-webkit-mask-size: 100% 100%;
-	//	mask-size: 100% 100%;
-	//	-webkit-mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-	//	mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-	//	-webkit-mask-position: center;
-	//	mask-position: center;
-	//	-webkit-mask-repeat: no-repeat;
-	//	mask-repeat: no-repeat;
-	//	width: 100px;
-	//	right: -100px;
-	//	top: 0;
-	//	bottom: 0;
-	//}
-}
-
-.tagline {
-	display: block;
-	font-style: italic;
-	font-weight: 400;
-	font-size: 0.85rem;
-	margin-top: 0;
+	margin: 3rem 0;
 }
