--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 :root {
   --sp: 1.5rem;
-  --darkgray: white;
-  --light-grey: rgba(40, 40, 40, 1);
+  --darkgray: #2f3437;
+  --light-grey: white;
 }
 
 * {
