--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -12,13 +12,21 @@
 }
 
 .singleArticle {
-	border-radius: 10px;
+	border-radius: 5px;
 	overflow: hidden;
+	border: 1px solid #4d4d4d;
+
+	a {
+		color: #aaa;
+
+		&:hover {
+			color: white;
+		}
+	}
 }
 
 .details {
 	padding: 1rem;
-	background-color: white;
 }
 
 .meta {
