--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -2,15 +2,20 @@
 	display: grid;
 
 	&Content {
-		grid-gap: calc(0.25rem * 2 + 1px);
 		grid-template-columns: repeat(4, 1fr);
+		grid-gap: calc(0.25rem * 2 + 1px);
 		padding: calc(0.25rem * 2 + 1px);
-		border-radius: 10px;
-		background-color: #f1efee;
+		border-radius: 0 5px 5px 5px;
+		background-color: #2f3437;
+		border: 1px solid #4d4d4d;
 	}
 
 	&Category {
 		grid-template-columns: minmax(8rem, 1fr) 3fr;
 		grid-gap: 30px;
+	}
+
+	&Heading {
+		grid-template-columns: repeat(4, max-content);
 	}
 }
