--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -14,7 +14,8 @@
 .singleArticle {
 	border-radius: 5px;
 	overflow: hidden;
-	border: 1px solid #4d4d4d;
+	border: 1px solid #393939;
+	background-color: transparent;
 
 	a {
 		color: #aaa;
