--- a/src/styles/Heading.module.scss
+++ b/src/styles/Heading.module.scss
@@ -3,36 +3,35 @@
 	padding: 0;
 	list-style: none;
 	width: max-content;
-	background-color: #2f3437;
+	background-color: #212426;
 	border-radius: 5px 5px 0 0;
-	border: 1px solid #4d4d4d;
-	border-bottom: none;
 
-	//&:after {
-	//	border: 1px solid white;
-	//	background: transparent;
-	//	content: "";
-	//	position: absolute;
-	//	mask-size: 100% 100%;
-	//	-webkit-mask-size: 100% 100%;
-	//	mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-	//	-webkit-mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-	//	mask-position: center;
-	//	-webkit-mask-position: center;
-	//	mask-repeat: no-repeat;
-	//	-webkit-mask-repeat: no-repeat;
-	//	width: 100px;
-	//	right: -100px;
-	//	top: 0;
-	//	bottom: 0;
-	//}
+	&:after {
+		border-bottom: 1px solid #393939;
+		background: #212426;
+		content: "";
+		position: absolute;
+		mask-size: 100% 100%;
+		-webkit-mask-size: 100% 100%;
+		mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
+		-webkit-mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
+		mask-position: center;
+		-webkit-mask-position: center;
+		mask-repeat: no-repeat;
+		-webkit-mask-repeat: no-repeat;
+		width: 100px;
+		right: -97px;
+		top: 0;
+		bottom: 0;
+	}
 }
 
 .listItem {
 	padding: 10px 20px 10px;
 	font-size: 1.15em;
 	font-weight: 500;
-	border-right: 1px solid #4d4d4d;
+	border-bottom: 1px solid #393939;
+	border-right: 1px solid #393939;
 
 	&:last-of-type {
 		border-right: none;
@@ -41,9 +40,18 @@
 	a {
 		display: flex;
 		align-items: center;
+		opacity: 0.35;
+
+		&:hover {
+			opacity: 1;
+		}
 
 		img {
 			margin-right: 10px;
 		}
 	}
+}
+
+.active {
+	opacity: 1 !important;
 }
