--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -1,14 +1,14 @@
 .title {
-	font-size: 1em;
+	font-size: 1.4em;
 	font-weight: 500;
-	line-height: 1.2;
+	line-height: 1.1;
 	margin-bottom: 5px;
 }
 
 .imagePlaceholder {
 	position: relative;
 	width: 100%;
-	height: 120px;
+	height: 150px;
 }
 
 .singleArticle {
@@ -16,12 +16,13 @@
 	overflow: hidden;
 	border: 1px solid #393939;
 	background-color: transparent;
+	color: white;
 
 	a {
-		color: #aaa;
-
 		&:hover {
-			color: white;
+			.title {
+				color: var(--theme-color);
+			}
 		}
 	}
 }
@@ -31,12 +32,13 @@
 }
 
 .meta {
-	font-weight: bold;
+	font-size: .8rem;
+	font-weight: 700;
+	color: var(--theme-grey);
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	margin-top: 15px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	font-size: .625rem;
+
+	.source {
+		margin-right: 10px;
+	}
 }
