--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -1,3 +1,23 @@
 .container {
 	margin: 3rem 0;
 }
+
+.title {
+	margin-bottom: 30px;
+
+	h1 {
+		font-family: "PolySans Bulky", serif;
+		text-transform: capitalize;
+		letter-spacing: .01em;
+		line-height: 1;
+		font-size: 3.4em;
+		margin: 0 0 5px;
+	}
+
+	p {
+		font-family: "FK Roman Standard", serif;
+		font-size: 1.2em;
+		margin-top: 0;
+		line-height: 1.3;
+	}
+}
