--- a/src/styles/Heading.module.scss
+++ b/src/styles/Heading.module.scss
@@ -1,37 +1,17 @@
 .list {
+	list-style: none;
 	margin: 0;
 	padding: 0;
-	list-style: none;
-	width: max-content;
-	background-color: #212426;
-	border-radius: 5px 5px 0 0;
-
-	&:after {
-		border-bottom: 1px solid #393939;
-		background: #212426;
-		content: "";
-		position: absolute;
-		mask-size: 100% 100%;
-		-webkit-mask-size: 100% 100%;
-		mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-		-webkit-mask-image: url("./../../public/images/tab-7b15135b56-cropped.svg");
-		mask-position: center;
-		-webkit-mask-position: center;
-		mask-repeat: no-repeat;
-		-webkit-mask-repeat: no-repeat;
-		width: 100px;
-		right: -97px;
-		top: 0;
-		bottom: 0;
-	}
 }
 
 .listItem {
-	padding: 10px 20px 10px;
+	padding: 7px 0;
 	font-size: 1.15em;
 	font-weight: 500;
-	border-bottom: 1px solid #393939;
-	border-right: 1px solid #393939;
+
+	&:first-of-type {
+		padding-top: 0;
+	}
 
 	&:last-of-type {
 		border-right: none;
@@ -40,7 +20,7 @@
 	a {
 		display: flex;
 		align-items: center;
-		opacity: 0.35;
+		opacity: 0.4;
 
 		&:hover {
 			opacity: 1;
