--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,8 +2,8 @@
   --sp: 1.5rem;
   --dark-theme: #141414;
   --text-color: white;
-  --theme-color: #5cd4ae;
-  --theme-grey: #797979;
+  --theme-color: #826eff;
+  --theme-grey: #949494;
 }
 
 * {
@@ -20,7 +20,7 @@ body {
 }
 
 html {
-  font: 100%/1.5 "PolySans",serif;
+  font: 100%/1.5 "PolySans Neutral", serif;
   color: var(--text-color);
   background-color: var(--dark-theme);
   padding: var(--sp);
@@ -34,7 +34,7 @@ a {
 }
 
 main {
-  width: 60rem;
+  width: 75rem;
   margin: 0 auto;
 }
 
