--- a/src/styles/Category.module.scss
+++ b/src/styles/Category.module.scss
@@ -1,23 +1,51 @@
-.container {
-	margin: 3rem 0;
+.list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+
+	@media (max-width: calc(1200px + 1.5rem + 1.5rem - 1px)) {
+		margin-bottom: 3rem;
+		display: flex;
+		align-items: center;
+	}
 }
 
-.title {
-	margin-bottom: 30px;
+.listItem {
+	padding: 7px 0;
+	font-size: 1.15em;
+	font-weight: 500;
 
-	h1 {
-		font-family: "PolySans Bulky", serif;
-		text-transform: capitalize;
-		letter-spacing: .01em;
-		line-height: 1;
-		font-size: 3.4em;
-		margin: 0 0 10px;
+	@media (max-width: calc(1200px + 1.5rem + 1.5rem - 1px)) {
+		margin-right: 2rem;
 	}
 
-	p {
-		font-family: "FK Roman Standard", serif;
-		font-size: 1.2em;
-		margin-top: 0;
-		line-height: 1.35;
+	&:first-of-type {
+		padding-top: 0;
+
+		@media (max-width: calc(1200px + 1.5rem + 1.5rem)) {
+			padding-top: 7px;
+		}
 	}
+
+	&:last-of-type {
+		border-right: none;
+	}
+
+	a {
+		display: flex;
+		align-items: center;
+		opacity: 0.4;
+
+		&:hover {
+			opacity: 1;
+		}
+
+		img {
+			margin-right: 10px;
+		}
+	}
+}
+
+.active {
+	opacity: 1 !important;
 }
