--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -5,6 +5,18 @@
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: calc(0.5rem * 2 + 1px);
 		border-radius: 0 5px 5px 5px;
+
+		@media (max-width: calc(960px + 1.5rem + 1.5rem - 1px)) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
+			grid-template-columns: repeat(1, 1fr);
+		}
+
+		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
+			grid-gap: 0;
+		}
 	}
 
 	&Category {
@@ -15,5 +27,9 @@
 	&Main {
 		grid-template-columns: 250px calc(100% - 250px - 1.5rem);
 		grid-gap: 1.5rem;
+
+		@media (max-width: calc(1200px + 1.5rem + 1.5rem - 1px)) {
+			display: block;
+		}
 	}
 }
