--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,10 +3,10 @@ $tablet-width: 728px;
 
 :root {
   --sp: 1.5rem;
-  --dark-theme: #141414;
+  --dark-theme: #0d0d0d;
   --text-color: white;
-  --theme-color: #ff652c;
-  --theme-grey: #949494;
+  --theme-color: #abff96;
+  --theme-grey: rgb(161 161 170);
   --content-width: 1200px;
   --tablet-width: 728px;
 }
