--- a/src/styles/Heading.module.scss
+++ b/src/styles/Heading.module.scss
@@ -1,21 +1,24 @@
 .container {
-	margin: 3rem 0;
+	margin: 2rem 0;
 }
 
 .title {
 	margin-bottom: 30px;
+
 
 	@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
 		margin-bottom: 0;
 	}
 
 	h1 {
-		font-family: "PolySans Bulky", serif;
+		font-family: "PolySans Bulky Italic", serif;
+		// font-family: "FK Roman Standard", serif;
 		text-transform: capitalize;
 		letter-spacing: .01em;
 		line-height: 1;
-		font-size: 3.4em;
-		margin: 0 0 10px;
+		font-size: 4em;
+		text-align: right;
+		margin: 0;
 
 		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
 			font-size: 2.2em;
