--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -1,9 +1,9 @@
 .title {
-	font-family: "PolySans Median Italic", serif;
+	font-family: "PolySans Median", serif;
 	letter-spacing: .01em;
 	min-height: 70px;
 	font-size: 1.25em;
-	line-height: 1.2;
+	line-height: 1.1;
 	margin-bottom: 10px;
 	display: -webkit-box;
 	-webkit-line-clamp: 3;
