--- a/src/styles/Heading.module.scss
+++ b/src/styles/Heading.module.scss
@@ -12,15 +12,15 @@
 
 	h1 {
 		font-family: "PolySans Bulky Italic", serif;
-		// font-family: "FK Roman Standard", serif;
 		text-transform: capitalize;
 		letter-spacing: .01em;
 		line-height: 1;
 		font-size: 4em;
 		text-align: right;
-		margin: 0;
+		margin: 0 0 5px;
 
 		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
+			margin: 0 0 10px;
 			font-size: 2.2em;
 		}
 	}
@@ -34,5 +34,54 @@
 		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
 			font-size: 0.95em;
 		}
+	}
+}
+
+.mainMenu {
+	position: fixed;
+	list-style: none;
+	display: flex;
+	background-color: #18181a;
+	color: var(--theme-color);
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	inset: 0 -100% 0 100%;
+	transform: translateZ(0);
+	top: 0;
+	left: 0;
+	border-right: 1px solid rgb(49, 49, 49);
+	opacity: 0;
+	transition: transform .25s,opacity 0s ease .25s;
+
+	@media (min-width: 1200px) {
+		max-width: 650px;
+		right: -650px;
+	}
+}
+
+.mainMenuWrapper {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	width: 100%;
+	min-height: 100%;
+
+	ul {
+		padding: 1rem;
+		font-size: 3rem;
+
+		img {
+			display: none;
+		}
+	}
+}
+
+.menuTrigger {
+	font-size: 1.3rem;
+	font-family: "PolySans Median", serif;
+	letter-spacing: .01em;
+
+	@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
+		font-size: 1rem;
 	}
 }
