--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,10 +52,20 @@ main {
 }
 
 header {
-  margin-bottom: 10px;
-  padding-bottom: 20px;
-  padding-top: 0;
+  //margin-bottom: 10px;
+  //padding-bottom: 20px;
+  padding: 0.5rem 0 1rem 0;
   border-bottom: 2px solid rgb(56, 56, 56);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  @media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
+    .logo {
+      width: 100px;
+      height: 45px;
+    }
+  }
 }
 
 h1, h2 {
