--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -1,10 +1,10 @@
 .title {
-	font-family: "PolySans Median", serif;
+	font-family: "PolySans Bulky", serif;
 	letter-spacing: .01em;
 	min-height: 70px;
-	font-size: 1.25em;
-	line-height: 1.1;
-	margin-bottom: 10px;
+	font-size: 1.75em;
+	line-height: 1.15;
+	margin: 5px 0 10px;
 	display: -webkit-box;
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
@@ -29,19 +29,6 @@
 }
 
 .singleArticle {
-	border-radius: 5px;
-	overflow: hidden;
-	border: 1px solid rgb(49 49 49);
-	background-color: #18181a;
-
-	@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
-		border: none;
-		border-radius: 0;
-		padding: 1rem 0;
-		border-bottom: 1px solid rgb(49 49 49);
-		background-color: transparent;
-	}
-
 	a {
 		@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
 			display: grid;
@@ -63,37 +50,21 @@
 }
 
 .details {
-	padding: 1rem;
+	padding: 1rem 0;
 
 	@media (max-width: calc(680px + 1.5rem + 1.5rem - 1px)) {
 		padding: 0 0 0 0.5rem;
 	}
 }
 
-.meta {
-	font-family: "PolySans Neutral", serif;
-	letter-spacing: .01em;
-	font-size: .75rem;
-	font-weight: 500;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-top: 5px;
-	opacity: 0.6;
-	transition: opacity 0.3s linear;
-}
-
 .source {
-	margin-right: 10px;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	color: #fdc006;
+	font-family: "PolySans Median", serif;
+	letter-spacing: .01em;
 }
 
 .dateTime {
-	&:first-letter{
-		text-transform: capitalize;
-	}
+	color: #a2a2a2;
 }
 
 .sourceImage {
