--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -2,13 +2,12 @@
 	display: grid;
 
 	&Content {
-		grid-template-columns: repeat(3, 1fr);
-		grid-gap: calc(0.5rem * 2 + 1px);
-		border-radius: 0 5px 5px 5px;
+		grid-template-columns: repeat(4, minmax(0,1fr));
+		grid-gap: 10px;
 	}
 
 	&Category {
-		grid-template-columns: minmax(8rem, 1fr) 3fr;
-		grid-gap: 30px;
+		grid-template-columns: repeat(4, minmax(0,1fr));
+		grid-gap: 10px;
 	}
 }
