--- a/src/styles/Utility.module.scss
+++ b/src/styles/Utility.module.scss
@@ -7,7 +7,12 @@
 	}
 
 	&Category {
-		grid-template-columns: repeat(4, minmax(0,1fr));
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 		grid-gap: 10px;
+
+		& > div {
+			border-left: 1px solid rgb(47, 51, 54);
+			border-top: 1px solid rgb(47, 51, 54);
+		}
 	}
 }
