--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -18,6 +18,7 @@
 
 	h3 {
 		margin-top: 0;
+		margin-bottom: 0;
 	}
 
 	a {
@@ -37,6 +38,16 @@
 	}
 }
 
+.publisherListing {
+	h3 {
+		margin-bottom: 5px;
+	}
+
+	.dateTime {
+		margin-top: 0;
+	}
+}
+
 .source {
 	color: var(--link-color);
 	letter-spacing: .01em;
@@ -46,6 +57,7 @@
 .dateTime {
 	font-size: 0.75em;
 	font-family: "PolySans Median", serif;
+	margin-top: 10px;
 	color: #a2a2a2;
 	display: flex;
 	align-items: center;
